--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   postgres:
-    build: .
+    image: postgres:18
     container_name: soacDB
     environment:
       POSTGRES_USER: Arrobo
@@ -14,5 +14,17 @@ services:
       - ./csv:/csv
       - pgdata:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: arrobo@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: arrobo
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
 volumes:
   pgdata:
+  pgadmin_data:
