--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "morgan": "^1.10.1",
     "pg": "^8.16.3"
   },
   "_moduleAliases": {
